--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,6 +9,8 @@ layout: default
 
   {{ content }}
 
+<!--This is the original code that displayed post titles on the home page.
+
   {%- if site.posts.size > 0 -%}
     <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
     <ul class="post-list">
@@ -30,5 +32,7 @@ layout: default
 
     <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%}
+  
+-->
 
 </div>
