--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,9 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+
+  <!--The below css can be added for GDPR compliance
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+  -->
+  
 </head>
