--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,25 @@
 
     {%- include footer.html -%}
 
+    <!--The below code can be added for GDPR compliance
+    <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+    <script>
+    window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#edeff5",
+          "text": "#838391"
+        },
+        "button": {
+          "background": "transparent",
+          "text": "#4b81e8",
+          "border": "#4b81e8"
+        }
+      }
+    });
+    </script>
+    -->
+
   </body>
 
 </html>
